# RoutesMilkRun

./: .gitignore  BUSINESS_LOGIC.md  TECHNICAL_DOCUMENTATION.md  debug_hub_helper.csv  hub_debug.csv  paths.py  pyproject.toml  settings.py
backend/: app.py
domain/: data_structures.py  demand.py  domain_algorithms.py  general_algorithms.py  hub.py  hub_route.py  kpi_set.py  operational_route.py  project.py  regional_hub_view.py  route_pattern.py  scenario.py  shipper.py  tariff.py  trip.py
domain/routes/: direct_route.py  first_leg_route.py  linehaul_route.py  route.py  route_costing_strategies.py  route_demand_aggregation_strategies.py  route_pattern.py
helper_files/: hubs.xlsx  locations.xlsx  vehicles.csv  ~$hubs.xlsx
infrastructure/: demand_data_transformer.py  graf_loader.py  tariffs_transformer.py
repositories/: data_structures_repository.py  direct_route_repository.py  hub_repository.py  operational_route_repository.py  project_repository.py  route_pattern_repository.py  shipper_repository.py  tariffs_repository.py  trip_repository.py  vehicle_repository.py
services/: baseline_builder.py  graf_exporter.py  hub_direct_swapper.py  hub_swap_service.py  kpi_exporter.py  map_generator.py  project_manager.py  project_service.py  roundtrip_combination_algorithm.py  route_pattern_creation_iterator.py  scenario_service.py  solver.py  tariff_service.py  vehicle_permutation_service.py
src/rob_4flow/: paths.py  pywebview_main.py  settings.py
tests/: factories.py
tests/infrastructure/: test_data_loader.py  vehicles.csv
web/: style.css
web/js/: app.js
(+143 files in other folders)
