[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rob_4flow"
version = "0.1.0"
description = "Your package description"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pywebview",
    "flask",
    "flask_cors",
    "werkzeug",
    "pandas",
    "haversine",
    "numpy",
    "folium",
    "pulp"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rob_4flow = [
    "helper_files/**/*",
    "web/**/*"
]
